tests/pass/test_module.tk
import std/io

fn main() -> i32 {
    io::println("Hello from module!")
    return 0
}
