tests/reject/fail_import.tk
import core/missing_module
import std/io::{MissingSymbol}

fn main() {
}
